--- a/app/src/main/res/layout/activity_listview.xml
+++ b/app/src/main/res/layout/activity_listview.xml
@@ -1,13 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--  Single List Item Design -->
-
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/label"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="10dip"
-    android:textSize="16dip"
-    android:textStyle="bold"
-    >
-</TextView>
+    android:layout_height="wrap_content"
 
+    android:orientation="horizontal"
+    android:padding="5dip" >
+
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/fileName"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:padding="5dip"
+        android:textSize="16dip"
+        android:textStyle="bold"></TextView>
+
+</RelativeLayout>
